# ai-agent

./: .env  README.md  cli.py  pyproject.toml
core/: agent.py  config.py  http.py  llm.py  logging.py  memory.py  promts.py
providers/: openai_llm.py
tests/: test_agent.py  test_memory_summary.py  test_tools.py  test_weather.py
tools/: calculator.py  datetime_tool.py  weather.py
